gcc/testsuite/rust/rustc/ui/issues/issue-50600.rs
struct Foo (
    fn([u8; |x: u8| {}]), // { dg-error ".E0308." "" { target *-*-* } }
);

fn main() {}

